# fibjs_vender

./: .gitignore  .gitmodules  .travis.yml  .travis.yml.bak  README.md  appveyor.yml  arch-run  build  build-from-msbuild.cmd  build.cmake  build.cmd  build1  fibjs_vender.sln  libs.cmake
.VCTargets/: Toolset-llvm-vs2017.props  Toolset-llvm-vs2017.targets
.appveyor/: install-llvm.cmd  install-make.sh  set-git-bash.cmd  set-llvm.cmd
.github/workflows/: build.sh  build.yml  gen_snapshot.sh  jssdk_test.sh  pack.sh  set-env-vars.sh  setup_ubuntu.sh  test.sh
.pre-requisites/VS2017-FIBJS/: install.bat
.pre-requisites/VS2019-FIBJS/: install.bat
.travis/: build.sh  release.sh
SpiderMonkey/: CMakeLists.txt  SpiderMonkey.vcxproj  SpiderMonkey.vcxproj.filters
SpiderMonkey/include/: jsapi.h  jsautocfg.h  jsconfig.h  jsproto.tbl  jspubtd.h
SpiderMonkey/src/: jsapi.c  jsatom.c  jsatom.h  json.cpp  prmjtime.c
abseil/: CMakeLists.txt
appindicator/: CMakeLists.txt
appindicator/src/: app-indicator.c  application-service-marshal.h
blake2/: CMakeLists.txt  README.md
blst/: CMakeLists.txt  README.md
blst/include/: bbs.h
blst/src/: aggregate.c  bbs_server.c  no_asm.h  vect.h
cares/: CMakeLists.txt  LICENSE  README.md  ares.h  cares.vcxproj  cares.vcxproj.filters
cares/include/: ares_build.h  ares_rules.h  config.h
cares/src/: acountry.c  adig.c  ahost.c  ares__close_sockets.c  ares__get_hostent.c  ares__read_line.c  ares__timeval.c  ares_cancel.c  ares_create_query.c  ares_data.c  ares_destroy.c  ares_expand_name.c  ares_expand_string.c  ares_fds.c  ares_free_hostent.c  ares_free_string.c  ares_gethostbyaddr.c  ares_gethostbyname.c  ares_getnameinfo.c  ares_getsock.c  ares_init.c  ares_library_init.c  ares_llist.c  ares_mkquery.c  ares_options.c  ares_parse_a_reply.c  ares_parse_aaaa_reply.c  ares_parse_mx_reply.c  ares_parse_naptr_reply.c  ares_parse_ns_reply.c  ares_parse_ptr_reply.c  ares_parse_soa_reply.c  ares_parse_srv_reply.c  ares_parse_txt_reply.c  ares_platform.c  ares_process.c  ares_query.c  ares_search.c  ares_send.c  ares_setup.h  (+8 more)
cef/: CMakeLists.txt
curve25519/: CMakeLists.txt  LICENSE  README.md
datachannel/: CMakeLists.txt
dbusmenu/: CMakeLists.txt  config.h
editline/: CMakeLists.txt  LICENSE  README.md
ev/: CMakeLists.txt  LICENSE  README.md  ev.h
exif/: CMakeLists.txt  LICENSE  README.md  exif.vcxproj  exif.vcxproj.filters
exlib/: CMakeLists.txt  exlib.vcxproj  exlib.vcxproj.filters
expat/: CMakeLists.txt  README.md  expat.vcxproj  expat.vcxproj.filters
fasttext/: CMakeLists.txt
gd/: CMakeLists.txt  README.md  gd.vcxproj  gd.vcxproj.filters
gtest/: CMakeLists.txt  README.md  gtest.vcxproj  gtest.vcxproj.filters
gumbo/: CMakeLists.txt  README.md  gumbo.vcxproj
hnswlib/: README.md  hnswlib.h
icu/: CMakeLists.txt  icu.vcxproj  icu.vcxproj.filters
indicator/: CMakeLists.txt
jemalloc/: CMakeLists.txt  LICENSE  README.md
jpeg/: CMakeLists.txt  README.md  jpeg.vcxproj
jssdk/: CMakeLists.txt  jssdk.vcxproj  jssdk.vcxproj.filters
juice/: CMakeLists.txt
leveldb/: CMakeLists.txt  README.md  leveldb.vcxproj  leveldb.vcxproj.filters
libc/: options.cmake
mbedtls/: CMakeLists.txt  README.md  mbedtls.vcxproj  mbedtls.vcxproj.filters  patch-mbedtls-v2.7.12.diff  patch-mbedtls-v2.7.diff  patch-mbedtls-v3.1.0.diff  update.js
mongo/: CMakeLists.txt  mongo.vcxproj
msgpack/: README.md  msgpack.vcxproj  msgpack.vcxproj.filters
nlohmann/: README.md
openssl/: CMakeLists.txt  LICENSE  README.md
pcre/: CMakeLists.txt  LICENSE  README.md  pcre.vcxproj  pcre.vcxproj.filters
png/: CMakeLists.txt  README.md  png.vcxproj
postject/: postject-api.h
scripts/: get_env.sh
secp256k1/: CMakeLists.txt  README.md
snappy/: CMakeLists.txt  README.md  snappy.vcxproj
sqlite/: CMakeLists.txt  README.md  sqlite.vcxproj  sqlite.vcxproj.filters  sqlite3.h
tiff/: CMakeLists.txt  README.md  tiff.vcxproj
tools/: Library.cmake  LibraryTest.cmake  basic.cmake  get_env.cmake  option.cmake  option_config.cmake  option_flags.cmake  option_flags_clang.cmake  option_flags_vc.cmake  option_libs.cmake  option_src.cmake  platform.cmake  test.cmake  toolchain-internal.cmake  vsmake.js
umysql/: CMakeLists.txt  umysql.vcxproj
unicode/: CMakeLists.txt  README.md
unzip/: CMakeLists.txt  README.md  unzip.vcxproj  unzip.vcxproj.filters
usrsctp/: CMakeLists.txt
uuid/: CMakeLists.txt  uuid.vcxproj
uv/: CMakeLists.txt  README.md
uv/include/: uv.h
uv/src/unix/: core.c
v8/: CMakeLists.txt  LICENSE  README.md  gen_embedded.js  mksnapshot.js  update-8.9.x.js  update.js  update.sh  v8.vcxproj  v8.vcxproj.filters  vsmake.js
webp/: CMakeLists.txt  README.md  webp.vcxproj  webp.vcxproj.filters
winiconv/: CMakeLists.txt  win_iconv.h  winiconv.vcxproj  winiconv.vcxproj.filters
zlib/: CMakeLists.txt  README.md  zlib.vcxproj
zmq/: CMakeLists.txt  zmq.vcxproj  zmq.vcxproj.filters
(+1022 files in other folders)
